<resources>
    <string name="app_name">QuizApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="q1">Quel est le résultat affiché ?</string>
    <string name="q2">Que se passe-t-il à la compilation ?</string>
    <string name="q3">Quel est le résultat affiché ?</string>
    <string name="q5">Que se passe-t-il si on sérialise puis désérialise un objet User ?</string>
    <string name="q4">Quel est le résultat affiché ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">\ Create an account.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>
    <string name="_5">\ of 5</string>
    <string name="votre_score_est">Votre score est</string>
</resources>