<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/lightGray"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        android:background="@drawable/round_background"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="5dp"
        >
    </de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout
        style="@style/LLbg"
        android:layout_width="match_parent"
        android:layout_height="606dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            style="@style/CustomEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_fixed"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            style="@style/CustomEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password_fixed"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bLogin"
            style="@style/SignButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                style="@style/tvLogin" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                style="@style/tvLogin" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>