<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightGray"
    tools:context=".Quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp">
        <TextView
            android:id="@+id/tvCurrentQstInd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            style="@style/tvQst"
            />

        <TextView
            android:id="@+id/tvQstCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textColor="@color/gray_400"
            android:textStyle="bold"
            style="@style/tvQst"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:progressDrawable="@drawable/progress_drawable"
        android:max="100"
        android:progress="0"
        android:layout_marginHorizontal="7dp"
        android:layout_marginVertical="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/LLQst">

        <ImageView
            android:id="@+id/imageViewQ1"
            style="@style/ImgQst"
            android:src="@drawable/q1" />

        <TextView
            android:id="@+id/TVQst"
            android:text="@string/q1"
            style="@style/tvQsts"
            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioBtn1"
            style="@style/RoundedRadioButton"
            android:drawableEnd="@drawable/ic_checked_placeholder"
            android:text="Radio Button 1"
            android:layout_margin="8dp" />

        <RadioButton
            android:id="@+id/radioBtn2"
            style="@style/RoundedRadioButton"
            android:drawableEnd="@drawable/ic_checked_placeholder"
            android:text="Radio Button 2"
            android:layout_margin="8dp" />

        <RadioButton
            android:id="@+id/radioBtn3"
            style="@style/RoundedRadioButton"
            android:drawableEnd="@drawable/ic_checked_placeholder"
            android:text="Radio Button 3"
            android:layout_margin="8dp" />
    </RadioGroup>

    <Button
        android:id="@+id/bNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        style="@style/nextBtnStyle"
        android:drawableEnd="@drawable/ic_arrow_fixed"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        tools:srcCompat="@drawable/logo" />

</LinearLayout>